# LogLang

./: .gitignore  CMakeLists.txt  README.MD  bincalc.ll  cat_checklist.inipp  loglang.hpp  main.cpp  mathenyatica.hpp  or.ll  or.mny
